containers/web-service-gin/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goweb
spec:
  selector:
    app: goweb
  ports:
    - name: http
      port: 80
      targetPort: http
