containers/web-service-gin/k8s/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: goweb
spec:
  to:
    kind: Service
    name: goweb
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
